--- a/index.html
+++ b/index.html
@@ -1,25 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagination</title>
-    <link rel="stylesheet" href="/index.css">
+    <title>feed page</title>
+    <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
     <div id="root">
-        <div id="main-container">
-            <div id="page-data">
-                <!-- <div class="data">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel sequi tenetur culpa illo neque accusantium doloremque praesentium, ratione aperiam obcaecati corporis maiores facilis hic saepe incidunt minus? Molestiae, reprehenderit. Iste, fugiat ducimus!
-                </div> -->
+        <div id="left-container">
+            <h3>All dbms Topics</h3>
+            <div id="sub-name">
+
+                <div class="feed-sub"><a
+                        href="http://localhost:2000/api/v1/subjects/dbms/topics/Entity Relationship Model">Entity
+                        Relationship Model</a></div>
+
+                <div class="feed-sub"><a
+                        href="http://localhost:2000/api/v1/subjects/dbms/topics/Relational Model">Relational Model</a>
+                </div>
+
+                <div class="feed-sub"><a
+                        href="http://localhost:2000/api/v1/subjects/dbms/topics/Normalisation">Normalisation</a></div>
+
+                <div class="feed-sub"><a href="http://localhost:2000/api/v1/subjects/dbms/topics/All">All</a></div>
+
+            </div>
+        </div>
+        <div id="root-container">
+            <div>
+                <h3>dbms : Entity Relationship Model</h3>
+            </div>
+            <div id="page-data-container">
             </div>
             <div id="page-number-container">
-                <!-- <div class='pages'>1</div> -->
+            </div>
+            <div id="goto">
+                <form id="form" onsubmit="return false">
+                    <input id="page-num" type="text" placeholder="page number...">
+                </form>
+                <button id="submit" class="hover" form="form" onclick=gotoPage(parseInt(this.form[0].value))>Go to
+                    page</button>
+            </div>
+            <div id="invalid-msg">Invalid Page Number</div>
+        </div>
+        <div id="right-container">
+            <h3>Navigation</h3>
+            <div class="nav-btn">
+                <a href="#">
+                    <button class="btn">Add Question</button>
+                </a>
+                <a href="http://localhost:2000/">
+                    <button class="btn">Home</button>
+                </a>
+                <a href="http://localhost:2000/api/v1/subjects/">
+                    <button class="btn">All Subjects</button>
+                </a>
+                <a href="#">
+                    <button class="btn">Unanswered<br>Questions</button>
+                </a>
             </div>
         </div>
     </div>
     <script src="index.js"></script>
 </body>
+
 </html>
