fixed some issues

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="root">
         <div id="root-container">
             <div>
-                <h3>dbms : Entity Relationship Model</h3>
+                <h3>Sub : Chapter</h3>
             </div>
             <div id="page-data-container">
             </div>
